FIV 15.02.19 - Promise, Chart

--- a/ue04/src/app/cars.component.html
+++ b/ue04/src/app/cars.component.html
@@ -3,4 +3,17 @@
     <p>
         <app-clock></app-clock>
     </p>
+    <div>
+        <div style="display: block">
+          <canvas baseChart
+                  [datasets]="barChartData"
+                  [labels]="barChartLabels"
+                  [options]="barChartOptions"
+                  [legend]="barChartLegend"
+                  [chartType]="barChartType"
+                  (chartHover)="chartHovered($event)"
+                  (chartClick)="chartClicked($event)"></canvas>
+        </div>
+        <button (click)="randomize2()">Update</button>
+      </div>
 </div>
